[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background/seemless/Blue Nebula/Blue Nebula 1 - 512x512.png" type="Texture" id=2]
[ext_resource path="res://scripts/Adventure.gd" type="Script" id=3]
[ext_resource path="res://assets/background/Stars-Big_1_2_PC.png" type="Texture" id=4]
[ext_resource path="res://assets/collectibles/star.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/highland-gothic/HighlandGothicFLF-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Audio/background_music/Juhani Junkala [Chiptune Adventures] 4. Stage Select.ogg" type="AudioStream" id=7]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;


uniform float speed;


void fragment () {
	COLOR = texture(TEXTURE, vec2(UV.x , UV.y + TIME * speed));
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/speed = -0.1

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 3 )
shader_param/speed = -0.05

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -1, 0, 0, 0, 0, 629, 8, 0, 0, 0, 0, 315, 10 )
}

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 6 )

[node name="Adventure" type="Node2D"]
script = ExtResource( 3 )

[node name="Bg" type="TextureRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1333.0
margin_bottom = 750.0
rect_scale = Vector2( 1.3, 1 )
texture = ExtResource( 2 )

[node name="Bg2" type="TextureRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1333.0
margin_bottom = 750.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 322, 290 )

[node name="BgTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="AstroidPath" type="Path2D" parent="."]
curve = SubResource( 6 )

[node name="AstroudLocation" type="PathFollow2D" parent="AstroidPath"]
position = Vector2( -1, -1 )
rotation = 0.0142847

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Scorelbl" type="Label" parent="."]
margin_left = 15.0
margin_top = 6.0
margin_right = 447.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 7 )
valign = 1

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="StarScoreLbl" type="Label" parent="."]
margin_left = 526.0
margin_top = 12.0
margin_right = 634.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 8 )
valign = 1

[node name="StarIcon" type="TextureRect" parent="."]
margin_left = 486.0
margin_right = 526.0
margin_bottom = 40.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="StarTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="GameOverLbl" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 33.0
margin_top = 81.0
margin_right = 613.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 9 )
text = "Game Over!"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="timeout" from="BgTimer" to="." method="_on_BgTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StarTimer" to="." method="_on_StarTimer_timeout"]
